--- a/home.html
+++ b/home.html
@@ -472,9 +472,9 @@
                                 <img src="img/project4.jpg" alt="projects image" class="projects__img">
     
                                 <div>
-                                    <span class="projects__subtitle">Animation</span>
-                                    <h1 class="projects__title">Animation Prototypes</h1>
-                                    <a href="#" class="projects__button">
+                                    <span class="projects__subtitle">Photography</span>
+                                    <h1 class="projects__title">Photography</h1>
+                                    <a href="gallery.html" class="projects__button">
                                         View demo <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
