gallery.html update
fixed the image alt error

--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
 
 <div id="modal" class="modal">
   <span class="close" onclick="closeModal()">&times;</span>
-  <img class="modal-content" id="modalImage">
+  <img class="modal-content" id="modalImage" alt="blank">
 </div>
 
 <div class="backHome">
