--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
                     <div class="home__data grid">
                         <h1 class="home__title">
                             Hello I'm John <br>
-                            A Web Developer, Designer, and Coder <br>
+                            A Web Developer and Designer <br>
                             Based In Texas <br>
                         </h1>
 
@@ -105,17 +105,21 @@
                         </div>
 
                         <ul class="home__social">
-                            <a href="https://www.linkedin.com/in/johngarciajr83/" target="_blank" class="home__social-link">
+                            <li>
+                                <a href="https://www.linkedin.com/in/johngarciajr83/" target="_blank" class="home__social-link" rel="noopener" aria-label="Visit my LinkedIn Profile">
                                 <i class="ri-linkedin-box-line"></i>
-                            </a>
-
-                            <a href="https://github.com/JohnGarciaJr" target="_blank" class="home__social-link">
-                                <i class="ri-github-line"></i>
-                            </a>
-
-                            <a href="https://www.behance.net/johngarcia32" target="_blank" class="home__social-link">
-                                <i class="ri-behance-line"></i>
-                            </a>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/JohnGarciaJr" target="_blank" class="home__social-link" rel="noopener" aria-label="Visit my Github Profile">
+                                    <i class="ri-github-line"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.behance.net/johngarcia32" target="_blank" class="home__social-link" rel="noopener" aria-label="Visit my Behance Profile">
+                                    <i class="ri-behance-line"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
 
@@ -127,7 +131,7 @@
                             </h3>
                             
                             <p class="home__info-description">
-                                Hello, I'm John, Web Developer, Designer, and Coder. I have a passion for creating beautiful websites and applications.
+                                Hello, I'm John, Web Developer and designer. I have a passion for creating beautiful websites and applications.
                             </p>
                         </div>
 
@@ -604,7 +608,7 @@
                                 <span class="contact__data-title">Whatsapp</span>
                                 <span class="contact__data-info">+1 2819350894</span>
                                 <!-- Insert a real number plus country code -->
-                                <a href="https://api.whatsapp.com/send?phone=12819350894&text=Hello, more information!" target="_blank" class="contact__button">
+                                <a href="https://api.whatsapp.com/send?phone=12819350894&text=Hello, more information!" target="_blank" class="contact__button" rel="noopener">
                                     Write me <i class="ri-arrow-right-line"></i>
                                 </a>
                             </div>
@@ -663,17 +667,21 @@
                 </ul>
 
                 <ul class="footer__social">
-                    <a href="https://www.linkedin.com/in/johngarciajr83/" target="_blank" class="footer__social-link">
-                        <i class="ri-linkedin-box-line"></i>
-                    </a>
-
-                    <a href="https://github.com/JohnGarciaJr" target="_blank" class="footer__social-link">
-                        <i class="ri-github-line"></i>
-                    </a>
-
-                    <a href="https://www.behance.net/johngarcia32" target="_blank" class="footer__social-link">
-                        <i class="ri-behance-line"></i>
-                    </a>
+                    <li>
+                        <a href="https://www.linkedin.com/in/johngarciajr83/" target="_blank" class="footer__social-link" rel="noopener" aria-label="Visit my LinkedIn Profile">
+                            <i class="ri-linkedin-box-line"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/JohnGarciaJr" target="_blank" class="footer__social-link" rel="noopener" aria-label="Visit my Github Profile">
+                            <i class="ri-github-line"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.behance.net/johngarcia32" target="_blank" class="footer__social-link" rel="noopener" aria-label="Visit my Behance Profile">
+                            <i class="ri-behance-line"></i>
+                        </a>
+                    </li>
                 </ul>
 
                 <span class="footer__copy">
@@ -684,7 +692,7 @@
 
 
         <!--========== SCROLL UP ==========-->
-        <a href="#" class="scrollup" id="scroll-up"> 
+        <a href="#" class="scrollup" id="scroll-up" rel="noopener" aria-label="Scroll Bar"> 
             <i class="ri-arrow-up-line"></i>
         </a>
 
