--- a/videos.html
+++ b/videos.html
@@ -20,19 +20,19 @@
         <img src="img3/thumbnail_funko.jpg" alt="Video 3">
     </div>
     <div class="video" onclick="openModal('https://www.youtube.com/embed/x8VKl_An1yM?si=bODyrnrHqM_xNFzY')">
-        <img src="thumbnail_corsair.jpg" alt="Video 4">
+        <img src="img3/thumbnail_corsair.jpg" alt="Video 4">
     </div>
     <div class="video" onclick="openModal('https://www.youtube.com/embed/2Ube1I_0_eA?si=MOgQRkSTxJvbWr7Y')">
-        <img src="thumbnail_projectmanaement.jpg" alt="Video 5">
+        <img src="img3/thumbnail_projectmanaement.jpg" alt="Video 5">
     </div>
     <div class="video" onclick="openModal('https://www.youtube.com/embed/KVLY2Zgh66A?si=U3-737FgklouVtWr')">
-        <img src="thumbnail_brand.jpg" alt="Video 6">
+        <img src="img3/thumbnail_brand.jpg" alt="Video 6">
     </div>
     <div class="video" onclick="openModal('https://www.youtube.com/embed/MJA6GL821pc?si=08yq5jRFJykIZttk')">
-        <img src="video3_thumbnail.jpg" alt="Video 7">
+        <img src="img3/thumbnail_catalyst.jpg" alt="Video 7">
     </div>
     <div class="video" onclick="openModal('https://www.youtube.com/embed/QZxXo0bwd8M?si=sn4-ADnJoHAZFS-N')">
-        <img src="video3_thumbnail.jpg" alt="Video 8">
+        <img src="img3/thumbnail_thirds.jpg" alt="Video 8">
     </div>
     <!-- Add more videos as needed -->
 </div>
