Fanillay Vide Gallery Update
Hopefully this is the final video gallery update

--- a/videos.html
+++ b/videos.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+    <h1>Video and Animation Class Assignments and Projects</h1>
+<p>These are just some of the videos that I produced, edited, and animated in class where I learned about lighting, positioning
+    and composition. I hope you enjoy them!
+</p>
+<h3>Click on an image to view embedded video it in full size</h3>
+
 <div class="gallery">
     <div class="video" onclick="openModal('https://www.youtube.com/embed/dwgXcB8n3kg?si=1yJdgW3LZ38fsPxw')">
         <img src="img3/thumbnail_portfolio.jpg" alt="Video 1">
@@ -23,7 +29,7 @@
         <img src="img3/thumbnail_corsair.jpg" alt="Video 4">
     </div>
     <div class="video" onclick="openModal('https://www.youtube.com/embed/2Ube1I_0_eA?si=MOgQRkSTxJvbWr7Y')">
-        <img src="img3/thumbnail_projectmanaement.jpg" alt="Video 5">
+        <img src="img3/thumbnail_projectmanagement.jpg" alt="Video 5">
     </div>
     <div class="video" onclick="openModal('https://www.youtube.com/embed/KVLY2Zgh66A?si=U3-737FgklouVtWr')">
         <img src="img3/thumbnail_brand.jpg" alt="Video 6">
