--- a/home.html
+++ b/home.html
@@ -450,7 +450,7 @@
                                 <img src="img/project2.jpg" alt="projects image" class="projects__img">
     
                                 <div>
-                                    <span class="projects__subtitle">Web</span>
+                                    <span class="projects__subtitle">Web CRM</span>
                                     <h1 class="projects__title">Salesforce</h1>
                                     <a href="https://www.salesforce.com/trailblazer/jgarcia83" class="projects__button" target="_blank" rel="noopner">
                                         View demo <i class="ri-arrow-right-line"></i>
