--- a/home.html
+++ b/home.html
@@ -97,7 +97,7 @@
 
                         <div class="home__blob grid">
                             <div class="home__john">
-                                <img src="img/JohnG-Hero.png" alt="">
+                                <img src="img/JohnG-Hero.png" alt="John Garcia">
                             </div>
 
                             <img src="assets/img/shape-wawes.svg" alt="" class="home__shape-wawes">
