--- a/home.html
+++ b/home.html
@@ -439,7 +439,7 @@
                                 <div>
                                     <span class="projects__subtitle">Github</span>
                                     <h1 class="projects__title">Github Repositories</h1>
-                                    <a href="https://github.com/JohnGarciaJr" class="projects__button" target="_blank" rel="noopner">
+                                    <a href="https://github.com/JohnGarciaJr" class="projects__button" target="_blank" rel="noopener">
                                         View demo <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
@@ -452,7 +452,7 @@
                                 <div>
                                     <span class="projects__subtitle">Web CRM</span>
                                     <h1 class="projects__title">Salesforce</h1>
-                                    <a href="https://www.salesforce.com/trailblazer/jgarcia83" class="projects__button" target="_blank" rel="noopner">
+                                    <a href="https://www.salesforce.com/trailblazer/jgarcia83" class="projects__button" target="_blank" rel="noopener">
                                         View demo <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
