--- a/home.html
+++ b/home.html
@@ -91,8 +91,8 @@
                     <div class="home__data grid">
                         <h1 class="home__title">
                             Hello I'm John <br>
-                            A Web Developer and Designer <br>
-                            Based In Texas <br>
+                            A Web Developer and Designer
+                            based In Texas <br>
                         </h1>
 
                         <div class="home__blob grid">
@@ -298,7 +298,7 @@
                                     <img src="img/adobe-illustrator-cc-icon.svg" alt="skills image">
                                 </div>
 
-                                <h3 class="skills__name">Adobe Illustrator</h3>
+                                <h3 class="skills__name">Illustrator</h3>
                                 <span class="skills__subtitle">Basic</span>
                             </div>
 
