Google Tag code addition

--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,17 @@
         <title>Photography Gallery</title>
         <link rel="stylesheet" href="gallery_styles.css">
         <script src="gallery.js"></script>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-P6GGTV7KSF"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-P6GGTV7KSF');
+        </script>
+
 </head>
 <body>
 
