--- a/home.html
+++ b/home.html
@@ -4,6 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-P6GGTV7KSF"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-P6GGTV7KSF');
+            </script>
+
         <!--=============== FAVICON ===============-->
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
