--- a/videos.html
+++ b/videos.html
@@ -6,6 +6,17 @@
         <title>Video Gallery</title>
         <link rel="stylesheet" href="videos_styles.css">
         <script src="videos.js"></script>
+
+        <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-P6GGTV7KSF"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-P6GGTV7KSF');
+            </script>
+
 </head>
 <body>
 
