--- a/home.html
+++ b/home.html
@@ -474,8 +474,8 @@
     
                                 <div>
                                     <span class="projects__subtitle">Design</span>
-                                    <h1 class="projects__title">Application Design</h1>
-                                    <a href="#" class="projects__button">
+                                    <h1 class="projects__title">Web and Graphic Design</h1>
+                                    <a href="https://www.linkedin.com/in/johngarciajr83/details/projects/" class="projects__button">
                                         View demo <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
